--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 <div id="howToPlay" style="max-width: 800px; margin: 20px auto; text-align: center; padding-bottom: 20px;">
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/watch?v=A9-FpNpptjM&ab_channel=IsaacFryxelius" 
+            src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
