--- a/index.html
+++ b/index.html
@@ -576,17 +576,17 @@
 </p>
 <p> Need a video to learn the game? Here is a video by Isaac Fryxelius!</p>
     <!-- Section for "How to Play" YouTube Video -->
-<div id="howToPlay" style="max-width: 800px; margin: 20px auto; text-align: center; padding-bottom: 20px;">
-    <div class="video-container">
-        <iframe 
-            src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
-    </div>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; margin: 20px auto;">
+    <iframe 
+        src="https://www.youtube.com/embed/A9-FpNpptjM" 
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+    </iframe>
 </div>
+
     
 <script>
         // Set up event listeners to close modals when clicking outside the modal-content area
