--- a/index.html
+++ b/index.html
@@ -568,23 +568,22 @@
     <button onclick="resetGameState()">Reset Game</button>
 </div>
 
-<!-- Link to Rulebook -->
-<p>
-     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px;"><a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF;">
-        Official Rulebook
-    </a></h2>
-</p>
-<p> Need a video to learn the game? Here is a video by Isaac Fryxelius!</p>
-    <!-- Section for "How to Play" YouTube Video -->
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; margin: 20px auto;">
-    <iframe 
-        src="https://www.youtube.com/embed/A9-FpNpptjM" 
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        allowfullscreen>
-    </iframe>
+<!-- Video Tutorial Section -->
+<div id="videoTutorial" style="margin-top: 20px; padding: 20px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
+    <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px; text-align: center;">
+        Need a video to learn the game? Here is a video by Isaac Fryxelius!
+    </h2>
+    
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; margin-top: 15px; border-radius: 10px;">
+        <iframe 
+            src="https://www.youtube.com/embed/A9-FpNpptjM" 
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 10px;" 
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
 </div>
 
     
