--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 </div>
 
 <!-- Video Tutorial Section -->
-<div id="videoTutorial" style="margin-top: 40px; padding: 20px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
+<div id="videoTutorial" style="padding: 20px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px; text-align: center;">
         Need a video to learn the game? Here is a video by Isaac Fryxelius!
     </h2>
