--- a/index.html
+++ b/index.html
@@ -569,12 +569,12 @@
 </div>
 
 <!-- Video Tutorial Section -->
-<div id="videoTutorial" style="padding: 20px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
+<div id="videoTutorial" style="padding: 20px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; width: 90%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px; text-align: center;">
         Need a video to learn the game? Here is a video by Isaac Fryxelius!
     </h2>
     
-    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; margin-top: 15px; border-radius: 10px;">
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; max-width: 100%; background: #000; margin-top: 15px; border-radius: 10px;">
         <iframe 
             src="https://www.youtube.com/embed/A9-FpNpptjM" 
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 10px;" 
