--- a/index.html
+++ b/index.html
@@ -567,7 +567,16 @@
 <div id="resetSection" style="margin-top: 50px;">
     <button onclick="resetGameState()">Reset Game</button>
 </div>
-
+<!-- Rulebook Link Box -->
+<div id="rulebookLink" style="margin-top: 20px; padding: 20px; background-color: #000; color: #FFFFFF; max-width: 800px; margin-left: auto; margin-right: auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; text-align: center;">
+    <h2 style="margin: 0; padding: 10px; color: #FFFFFF;">Official Rulebook</h2>
+    <p>
+        <a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFA500; font-size: 1.2em; text-decoration: underline;">
+            Click here to view the official rulebook for Terraforming Mars
+        </a>
+    </p>
+</div>
+    
 <!-- Video Tutorial Section -->
 <div id="videoTutorial" style="padding: 20px; background-color: rgba(245, 126, 55, 0.8); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px; text-align: center;">
