--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 <div style="text-align: center; margin-top: 20px;">
     <h2>
         <a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF; text-decoration: none;">
-            Official Rulebook PDF!
+           Click here for the Official Rulebook PDF!
         </a>
     </h2>
 </div>
