--- a/index.html
+++ b/index.html
@@ -583,11 +583,11 @@
             allowfullscreen>
         </iframe>
     </div>
-      <h4>
+      <h5>
         <a href="https://cdn.1j1ju.com/medias/13/3f/fb-terraforming-mars-rule.pdf" target="_blank" style="color: #FFFFFF; text-decoration: none;">
-           Click here for the Official Rulebook PDF!
+           <u>Click here for the Official Rulebook PDF!</u>
         </a>
-    </h4>
+    </h5>
 </div>
 
 <script>
