--- a/index.html
+++ b/index.html
@@ -570,9 +570,8 @@
 <!-- Video Tutorial Section -->
 <div id="videoTutorial" style="padding: 20px; background-color: rgba(245, 126, 55, 0.8); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px; text-align: center;">
-        Need a video to learn the game? Here is a video by Isaac Fryxelius!
-    </h2>
-    
+        Need a video to learn? <br> </h2> <h4>Here is a video by Isaac Fryxelius!</h4>
+
     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; max-width: 100%; background: #000; margin-top: 15px; border-radius: 10px;">
         <iframe 
             src="https://www.youtube.com/embed/A9-FpNpptjM" 
