--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="icon" href="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/appicon.png" type="image/png">
 
 <style>
+
+    .highlight-heading {
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    border-radius: 10px;
+    display: inline-block;
+    color: #FFFFFF;
+}
+
+    
  /* Video container to make the video responsive */
     .video-container {
         position: relative;
