--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 <!-- Card Search by Number -->
 <div id="cardLookupSection">
     <h2>Search Card by Number!</h2>
-    <p>Enter the unique number of your card to automatically apply its VP and tags!</p>
+    <p>Enter the unique number of your card to automatically apply its VPs and tags!</p>
     <p>IMPORTANT: This does NOT include VP-per-resource cards, as they constantly change.</p>
     <input id="cardNumberInput" placeholder="Enter card number" type="text"/>
     <button onclick="searchCard()">Search</button>
