--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     </div>
 </div>
 <!-- Card Search by Number -->
-<div id="cardLookupSection">
+<div id="searchCardBox" style="background-color: #000000; color: #FFFFFF; max-width: 800px; margin: 20px auto; padding: 20px; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
     <h2>Search Card by Number!</h2>
     <p>Enter the unique number of your card to automatically apply its VPs and tags!</p>
     <p>IMPORTANT: This does NOT include VP-per-resource cards, as they constantly change.</p>
