--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
 </div>
     
 <!-- Search Card by Number Box with matching style (solid color) -->
-<div id="searchCardBox" style="background-color: #F57E37; color: #FFFFFF; max-width: 800px; margin: 20px auto; padding: 20px; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
+<div id="searchCardBox" style="background-color: rgba(245, 126, 55, 0.8); color: #FFFFFF; max-width: 800px; margin: 20px auto; padding: 20px; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black;">
 
-    <h2 style="background-color: rgba(0, 0, 0, 0.6); padding: 10px; border-radius: 10px; display: inline-block; color: #FFFFFF;">Search Card by Number!</h2>
+    <h2 style="background-color: rgba(0, 0, 0, 0.6); padding: 0px; border-radius: 10px; display: inline-block; color: #FFFFFF;">Search Card by Number!</h2>
     <p>Enter the unique number of your card to automatically apply its VP and tags!</p>
     <p>IMPORTANT: This does NOT include VP-per-resource cards, as they constantly change.</p>
     
