--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
 </head>
 <body>
-<h3>Standard Resources and TR</h3>
+<h2>Standard Resources & TR</h2>
      
     <!-- Terraforming Rating Button -->
 <div class="terraforming-container full-width">
