--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 </div>
     
 <!-- Search Card by Number Box with matching style (solid color, aligned) -->
-<div id="searchCardBox" style="background-color: #F57E37; color: #FFFFFF; max-width: 800px; margin: 20px auto; padding: 20px; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
+<div id="searchCardBox" style="rgba(245, 126, 55, 0.8); color: #FFFFFF; max-width: 800px; margin: 20px auto; padding: 20px; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
 
     <h3 style="background-color: rgba(0, 0, 0, 0.6); padding: 8px 12px; border-radius: 10px; display: inline-block; color: #FFFFFF;">Search Card by Number!</h3>
     
