--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@ function updateTR(delta) {
     });
 </script>
    <!-- Personal Introduction Text Box -->
-<div id="personalIntro" style=" 15px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
+<div id="personalIntro" style="adding: 5px 15px; background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(245, 126, 55, 0.8)); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
     <h2 style="background: rgba(0, 0, 0, 0.7); color: #FFFFFF; padding: 10px; border-radius: 10px; text-align: center;">
         About Me and my app
     </h2>
