--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@ function updateTR(delta) {
 </script>
 
     <div id="rssFeedContainer" style="padding: 20px; background-color: rgba(245, 126, 55, 0.8); color: #FFFFFF; max-width: 800px; width: 100%; margin: 20px auto; border-radius: 15px; box-shadow: 0 0px 30px rgba(0, 0, 0, 1); border: 3px solid black; box-sizing: border-box;">
-    <h3 style="background-color: rgba(0, 0, 0, 0.6); padding: 4px; border-radius: 10px; display: inline-block; color: #FFFFFF;">Latest News</h3>
+    <h3 style="background-color: rgba(0, 0, 0, 0.6); padding: 4px; border-radius: 10px; display: inline-block; color: #FFFFFF;">Check out what the fans are talking about!</h3>
     <ul id="rssFeedList" style="padding-left: 0; list-style-type: none;"></ul>
 </div>
     
