--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
      
     <!-- Terraforming Rating Button -->
 <div class="terraforming-container full-width">
+    <p>Terraforming Rating</p>
     <button class="terraforming-button" onclick="openTRModal()">
     <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR">
     <span id="trCount">20</span> <!-- Initial value for Terraforming Rating -->
