--- a/index.html
+++ b/index.html
@@ -456,11 +456,11 @@
      
     <!-- Terraforming Rating Button -->
 <div class="terraforming-container full-width">
-    <p>Terraforming Rating</p>
     <button class="terraforming-button" onclick="openTRModal()">
-    <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR">
-    <span id="trCount">20</span> <!-- Initial value for Terraforming Rating -->
-</button>
+        <span style="font-size: 1em; color: black; font-weight: bold; margin-bottom: 10px;">Terraforming Rating</span>
+        <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR">
+        <span id="trCount">20</span> <!-- Initial value for Terraforming Rating -->
+    </button>
 </div>
      
      <!-- Resources Buttons - 2 Rows of 3 Buttons -->
