--- a/index.html
+++ b/index.html
@@ -514,14 +514,18 @@
         <div class="popup-section">
             
             <!-- Resource Section with Label, Value, and Buttons -->
-            <div class="popup-row">
-                <span class="popup-label resource-label">Resource</span>
-                <h3 id="resourceValueDisplay" class="popup-value">0</h3>
-                <div class="button-group">
-                    <button onclick="updateResource(1)" class="round-button">+</button>
-                    <button onclick="updateResource(-1)" class="round-button">-</button>
-                </div>
-            </div>
+<div class="popup-row">
+    <span class="popup-label resource-label">Resource</span>
+    <h3 id="resourceValueDisplay" class="popup-value">0</h3>
+    <div class="button-group">
+        <button onclick="updateResource(1)" class="round-button">+</button>
+        <button onclick="updateResource(-1)" class="round-button">-</button>
+        <button onclick="updateResource(5)" class="round-button">+5</button>
+        <button onclick="updateResource(-5)" class="round-button">-5</button>
+        <button onclick="updateResource(10)" class="round-button">+10</button>
+        <button onclick="updateResource(-10)" class="round-button">-10</button>
+    </div>
+</div>
 
             <!-- Production Section with Label, Value, and Buttons -->
             <div class="popup-row">
