--- a/index.html
+++ b/index.html
@@ -261,15 +261,16 @@
     }
 
      /* Modal styles */
+/* Modal Styles */
 .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed; /* Fixed position to stay on top */
+    z-index: 1; /* Ensures it's on top of other content */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
+    width: 100%; /* Full screen width */
+    height: 100%; /* Full screen height */
+    background-color: rgba(0, 0, 0, 0.5); /* Transparent black background */
 }
 /* Container for full-width buttons like Terraforming and Produce */
 .full-width {
