--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/appicon.png" type="image/png">
 
 <style>
-    /* Increase font size for resource and production values */
+    /* Increase font size for resource and productifon values */
 .popup-value {
     font-size: 3em; /* Large font size for both PC and mobile */
     font-weight: bold;
@@ -577,27 +577,25 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <div class="popup-section">
-            
-            <!-- Resource Section with Label, Value, and Buttons -->
-            <div class="popup-row">
-                <span class="popup-label resource-label">Resource</span>
-                <h3 id="resourceValueDisplay" class="popup-value">0</h3>
-                <div class="button-group">
-                    <button onclick="updateResource(1)" class="round-button">+</button>
-                    <button onclick="updateResource(-1)" class="round-button">-</button>
-                </div>
-            </div>
+    <span class="popup-label resource-label">Resource</span>
+    <h3 id="resourceValueDisplay" class="popup-value">0</h3>
+    <div class="button-group">
+        <button onclick="updateResource(-5)" class="popup-button red">-5</button>
+        <button onclick="updateResource(-1)" class="popup-button red">-1</button>
+        <button onclick="updateResource(1)" class="popup-button green">+1</button>
+        <button onclick="updateResource(5)" class="popup-button green">+5</button>
+    </div>
+</div>
 
-            <!-- Production Section with Label, Value, and Buttons -->
-            <div class="popup-row">
-                <span class="popup-label production-label">Production</span>
-                <p id="productionValueDisplay" class="popup-value">0</p>
-                <div class="button-group">
-                    <button onclick="updateProduction(1)" class="round-button">+</button>
-                    <button onclick="updateProduction(-1)" class="round-button">-</button>
-                </div>
-            </div>
-        </div>
+<!-- Production Section in the Popup -->
+<div class="popup-section">
+    <span class="popup-label production-label">Production</span>
+    <h3 id="productionValueDisplay" class="popup-value">0</h3>
+    <div class="button-group">
+        <button onclick="updateProduction(-5)" class="popup-button red">-5</button>
+        <button onclick="updateProduction(-1)" class="popup-button red">-1</button>
+        <button onclick="updateProduction(1)" class="popup-button green">+1</button>
+        <button onclick="updateProduction(5)" class="popup-button green">+5</button>
     </div>
 </div>
 
