--- a/index.html
+++ b/index.html
@@ -8,72 +8,7 @@
     <link rel="icon" href="https://raw.githubusercontent.com/KILLIONAIRE23/TMMobile/main/appicon.png" type="image/png">
 
 <style>
-    /* Increase font size for resource and productifon values */
-.popup-value {
-    font-size: 3em; /* Large font size for both PC and mobile */
-    font-weight: bold;
-}
-
-/* Button Group Layout */
-.button-group {
-    display: flex;
-    flex-wrap: nowrap; /* Prevent wrapping */
-    gap: 10px; /* Space between buttons */
-    justify-content: center;
-    margin-bottom: 15px;
-}
-
-/* Buttons General Style */
-.popup-button {
-    flex: 1 1 auto; /* Allow buttons to shrink */
-    max-width: 50px; /* Limit max width */
-    height: 50px; /* Increase button height */
-    border: none;
-    font-size: 1.2em; /* Keep the button font size unchanged */
-    font-weight: bold;
-    color: #fff;
-    border-radius: 5px; /* Square shape */
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Green Buttons */
-.popup-button.green {
-    background-color: #28a745;
-}
-
-.popup-button.green:hover {
-    background-color: #218838;
-}
-
-/* Red Buttons */
-.popup-button.red {
-    background-color: #dc3545;
-}
-
-.popup-button.red:hover {
-    background-color: #c82333;
-}
-
-/* Responsive Design for Small Screens */
-@media (max-width: 480px) {
-    .button-group {
-        gap: 5px; /* Reduce space between buttons */
-    }
-
-    .popup-button {
-        max-width: 45px; /* Reduce button size */
-        height: 45px;
-        font-size: 1em; /* Adjust font size for buttons */
-    }
-
-    /* Ensure font size for values increases on mobile as well */
-    .popup-value {
-        font-size: 2.5em; /* Slightly smaller than desktop */
-    }
-}
+    
 /* Style for each news item card */
     .rss-item {
         background-color: rgba(0, 0, 0, 0.7);
@@ -577,25 +512,27 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <div class="popup-section">
-    <span class="popup-label resource-label">Resource</span>
-    <h3 id="resourceValueDisplay" class="popup-value">0</h3>
-    <div class="button-group">
-        <button onclick="updateResource(-5)" class="popup-button red">-5</button>
-        <button onclick="updateResource(-1)" class="popup-button red">-1</button>
-        <button onclick="updateResource(1)" class="popup-button green">+1</button>
-        <button onclick="updateResource(5)" class="popup-button green">+5</button>
-    </div>
-</div>
+            
+            <!-- Resource Section with Label, Value, and Buttons -->
+            <div class="popup-row">
+                <span class="popup-label resource-label">Resource</span>
+                <h3 id="resourceValueDisplay" class="popup-value">0</h3>
+                <div class="button-group">
+                    <button onclick="updateResource(1)" class="round-button">+</button>
+                    <button onclick="updateResource(-1)" class="round-button">-</button>
+                </div>
+            </div>
 
-<!-- Production Section in the Popup -->
-<div class="popup-section">
-    <span class="popup-label production-label">Production</span>
-    <h3 id="productionValueDisplay" class="popup-value">0</h3>
-    <div class="button-group">
-        <button onclick="updateProduction(-5)" class="popup-button red">-5</button>
-        <button onclick="updateProduction(-1)" class="popup-button red">-1</button>
-        <button onclick="updateProduction(1)" class="popup-button green">+1</button>
-        <button onclick="updateProduction(5)" class="popup-button green">+5</button>
+            <!-- Production Section with Label, Value, and Buttons -->
+            <div class="popup-row">
+                <span class="popup-label production-label">Production</span>
+                <p id="productionValueDisplay" class="popup-value">0</p>
+                <div class="button-group">
+                    <button onclick="updateProduction(1)" class="round-button">+</button>
+                    <button onclick="updateProduction(-1)" class="round-button">-</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
