--- a/index.html
+++ b/index.html
@@ -894,7 +894,8 @@ document.addEventListener('DOMContentLoaded', fetchRSSFeed);
         saveGameState(); // Save after updating VP
     }
     let currentResource = '';
-let historyLogs = {}; // Object to store unique history for each resource
+let historyLog = [];  // Properly initialize as an empty array
+    let historyLogs = {}; // Object to store unique history for each resource
 
 function openModal(resource) {
     currentResource = resource;
@@ -1031,7 +1032,12 @@ function logHistory(delta, type) {
         <span style="color: ${delta > 0 ? 'green' : 'red'};">${action}</span> 
         <span style="color: ${type === 'Production' ? 'brown' : 'black'};">${type}</span>
     `;
-    historyLog.unshift(historyEntry);
+    
+    // Ensure `historyLog` is an array and add new entries
+    if (!Array.isArray(historyLog)) {
+        historyLog = []; // Reinitialize if it is not an array
+    }
+    historyLog.unshift(historyEntry); // Add the new entry at the beginning
 
     if (historyLog.length > 10) {
         historyLog.pop(); // Limit to the latest 10 entries
