--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     }
     .production-label {
         color: brown;
+        margin-top: 20px; /* Add more space above "Production" label to separate from resource buttons */
     }
 
 .popup-value {
@@ -215,6 +216,7 @@
     justify-content: center;
     gap: 10px; /* Space between buttons */
     align-items: center;
+    margin-bottom: 20px; /* Increase the space below each button group */
 }
     
 /* History Section */
@@ -224,6 +226,13 @@
     width: 100%;
 }
 
+/* Add more space above "History" label */
+.history-log {
+    margin-top: 20px; /* Add more space above the history log section */
+}
+
+
+    
 /* Remove the Close (X) button */
 .close {
     display: none; /* Hides the close button */
